--- a/gabu.html
+++ b/gabu.html
@@ -103,18 +103,18 @@
     <div class="row">
     <div class="feature-box col-lg-4">
       <img src="profile-circle-svgrepo-com.svg" class="icon" width="70" height="70" alt="">
-    <h3 class="feature-title">Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+    <h3 class="feature-title">No sé si cambiar este logo.</h3>
+    <p>Este texto casi no se lee.</p>
   </div>
   <div class="feature-box col-lg-4">
     <img src="like-upload-svgrepo-com.svg" class="icon" width="70" height="70" alt="">
-    <h3 class="feature-title">Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+    <h3 class="feature-title">Pero quería decirte</h3>
+    <p>Que pase lo que pase siempre estaré para tí</p>
   </div>
   <div class="feature-box col-lg-4">
     <img src="tick-svgrepo-com.svg" class="icon" width="70" height="70" alt="">
-    <h3 class="feature-title">Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+    <h3 class="feature-title">Ti amo</h3>
+    <p>Sé que fue dificil, pero eri lo más bonito que me ha pasado</p>
   </div>
 </div>
 </div>
