--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Para mi amor hermoso</title>
+  <title>Para mi amor hermoso Gabu</title>
 <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -103,18 +103,18 @@
     <div class="row">
     <div class="feature-box col-lg-4">
       <img src="profile-circle-svgrepo-com.svg" class="icon" width="70" height="70" alt="">
-    <h3 class="feature-title">Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+    <h3 class="feature-title">Hola mi amor</h3>
+    <p>No quise quitar los sticers porque me parecen bonitos</p>
   </div>
   <div class="feature-box col-lg-4">
     <img src="like-upload-svgrepo-com.svg" class="icon" width="70" height="70" alt="">
-    <h3 class="feature-title">Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+    <h3 class="feature-title">Pero si te quería decir</h3>
+    <p>que a pesar de que lo que hemos vivido eres la persona más especial para mi</p>
   </div>
   <div class="feature-box col-lg-4">
     <img src="tick-svgrepo-com.svg" class="icon" width="70" height="70" alt="">
-    <h3 class="feature-title">Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+    <h3 class="feature-title">Te amo.</h3>
+    <p>Con amor yo.</p>
   </div>
 </div>
 </div>
